# MayBank

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/api/: dividends.py  portfolio.py
backend/core/finnhub/: live_price_manager.py
backend/core/t212/: backfill.py  client.py
backend/db/: deps.py  postgres.py  schema.sql
backend/db/models/: __init__.py  postgres.py
backend/db/queries/: portfolio.py
backend/db/repositories/: dividends.py
backend/models/: dividends.py  finnhub.py  portfolio.py
frontend/static/css/: style.css
frontend/static/js/: dividends.js  home.js  main.js
frontend/static/js/pages/: dividends.js  home.js
frontend/templates/: dividends.html  home.html  index.html
frontend/templates/pages/: dividends.html  home.html
notebooks/: finnhub.ipynb  monte_carlo_simulation.ipynb  orders_explore.ipynb  portfolio.ipynb
