[project]
name = "maybank"
version = "0.1.0"
description = "Portfolio analytics and algorithmic trading platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "asyncpg==0.30.0",
    "duckdb==1.1.1",
    "redis==5.1.1",
    "yfinance==0.2.44",
    "pandas==2.2.3",
    "numpy==2.1.2",
    "dagster==1.8.7",
    "dagster-webserver==1.8.7",
    "python-dotenv==1.0.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.33",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
